# hermes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sqlfluff  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README-docker.md  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  sql-lint.yml
.superpowers/sdd/: task-2-report.md
src/hermes/: __init__.py
src/hermes/enrichment/: __init__.py  main.py
src/hermes/enrichment/as_metadata/: __init__.py  enricher.py  inetintel_downloader.py
src/hermes/enrichment/hoiho/: enricher.py  enricher_ipv6.py
src/hermes/enrichment/ipinfo/: enricher.py  enricher_ipv6.py
src/hermes/enrichment/peeringdb_ixp/: README.md  __init__.py  ixp_collector.py  ixp_collector_ipv6.py
src/hermes/enrichment/ripe_ipmap/: enricher.py  enricher_ipv6.py
src/hermes/enrichment/ripe_ipmap/cache/: iso_code_2
src/hermes/enrichment/routeviews/: __init__.py  enricher.py  enricher_ipv6.py
src/hermes/enrichment/utils/: common.py
src/hermes/enrichment/zdns/: enricher.py  enricher_ipv6.py
src/hermes/pipeline/: __init__.py  bootstrap_tables.py  budget.py  correlation_tomography.py  refresh_topology_tables.py  table_rerun.py  temporal_verdict.py  tomography.py  union.py
src/hermes/sql/: __init__.py  loader.py  paths.py
src/hermes/sql/queries/: 01_merge_upload_download_union.sql  02_detect_anomalies_union.sql  03_build_transient_events_union.sql  04_mapping_union.sql  05_temporal_edge_prevalences_union.sql  05_temporal_tomography_union.sql  06_correlation_tomography_all_edges_union.sql  06_correlation_tomography_bigquery_union.sql  06_correlation_tomography_prepare_union.sql  06_correlation_tomography_unexplained_hops_union.sql  07_translating_to_public_format_union.sql  README.md  create_correlation_hyperedges_tomography_v2.sql  create_events_explained_daily.sql  create_place_canonical_metro.sql  create_temporal_path_verdicts.sql  document.md  enrich_geolocation_add_metro.sql  enrich_ip_geoloc_add_metro.sql  legacy_detecting_events.sql  legacy_mapping_events.sql
src/hermes/sql/udfs/: README.md  compute_wasserstein_p_value.sql  mann_whitney_u_test.sql  welchs_t_test.sql
tests/: test_baseline_check.py  test_bootstrap_tables.py  test_golden_python.py  test_golden_sql.py  test_public_format_step.py  test_sql_loader.py  test_sql_paths.py  test_temporal_orchestration.py  test_temporal_prevalences_sql.py  test_temporal_verdict.py  test_temporal_verdicts_ddl.py  test_tomography_dispatch.py  test_zdns_parse.py
tests/golden/: bless.py
tests/golden/python/: edges_2026-06-01-sample.parquet  expected_setcover_2026-06-01-sample.json
tests/golden/udf/: stat_udf_cases.json
